ships can no longer overlap when placed by player, work on boards updating as game is played

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@ button{
     background-color: grey;
 }
 
-#attboard{
+.hit{
     background-color: red;
+}
+
+.miss{
+    background-color: black;
 }
